@@ -6,6 +6,8 @@ import org.apache.commons.collections.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
+
 @Component
 public class ItemDetailConverter {
 
@@ -22,7 +24,7 @@ public class ItemDetailConverter {
         ItemDetailResponse response = new ItemDetailResponse();
         response.setItem(itemResponseConverter.convert(itemDetail.getItem()));
         if (CollectionUtils.isNotEmpty(itemDetail.getSkus())){
-            response.setSkus(itemDetail.getSkus().stream().map(sku -> skuConverter.convert(sku)).toList());
+            response.setSkus(itemDetail.getSkus().stream().map(sku -> skuConverter.convert(sku)).collect(Collectors.toList()));
         }
         return response;
 
